--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "export": "next build && next export"
   },
   "dependencies": {
-    "next": "15.1.0",
+    "@netlify/plugin-nextjs": "^5.13.5",
+    "next": "^15.5.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "tailwind-merge": "^2.5.5"
@@ -21,7 +22,7 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
-    "eslint-config-next": "15.1.0",
+    "eslint-config-next": "^15.5.4",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
